Added New CriterionDto Mapping method